add category id to existing endpts
