# openapi/openapi.yaml
@@ -14,6 +14,12 @@ paths:
           schema:
             type: string
         - in: query
+          name: category_id
+          required: false
+          schema:
+            type: integer
+            format: int32
+        - in: query
           name: order_by
           required: true
           schema:
@@ -52,8 +58,12 @@ paths:
                 name:
                   type: string
                   minLength: 1
+                category_id:
+                  type: integer
+                  format: int32
               required:
                 - name
+                - category_id
       responses:
         201:
           description: Newly created item
@@ -118,8 +128,12 @@ paths:
                 name:
                   type: string
                   minLength: 1
+                category_id:
+                  type: integer
+                  format: int32
               required:
                 - name
+                - category_id
       responses:
         200:
           description: Updated item
@@ -311,15 +325,19 @@ components:
       required:
         - id
         - name
-        - createdAt
+        - created_at
+        - category_id
       properties:
         id:
           type: integer
           format: int32
         name:
           type: string
-        createdAt:
+        created_at:
           type: string
+        category_id:
+          type: integer
+          format: int32
 
     Record:
       type: object
